--- a/style.css
+++ b/style.css
@@ -268,6 +268,7 @@ a img.aligncenter {
 .logo-text {
     display: flex;
     flex-direction: column;
+    width: 400px;
 }
 
 .logo,
@@ -754,7 +755,7 @@ article {
 .pagination span,
 .nav-links a,
 .nav-links span {
-    padding: 0.75rem 1rem;
+    padding: 0.5rem;
     background: var(--background);
     border: 1px solid var(--light-beige);
     border-radius: 8px;
