--- a/style.css
+++ b/style.css
@@ -1062,7 +1062,7 @@ article {
     transform: translateY(-3px);
 }
 
-.footer-bottom {
+.footer-bottom p{
     text-align: center;
     padding-top: 2rem;
     border-top: 1px solid rgba(255,255,255,0.1);
